# bazel-proto-scala-test-one

./: .gitignore  README.md  WORKSPACE
module/submodule/one/src/: one.proto
module/submodule/one/src/proto/: BUILD.bazel
one/: BUILD.bazel  one.proto
one/com/test/bazel/: one.proto
